--- a/package.json
+++ b/package.json
@@ -3,9 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "formik": "^2.0.3",
+    "joi-browser": "^13.4.0",
+    "query-string": "^6.8.3",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.2.0"
+    "react-redux": "^7.1.3",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "react-toastify": "^5.4.0",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
+    "router": "^1.3.3",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
